# Proyecto_EDA_Subastas_BOE

./: PresentacionEDA.pptx  README.md  main.py  pyproject.toml
src/: memoria.ipynb
src/data/: subastas_analisis_final.csv  subastas_inmuebles_dic2025.csv  subastas_inmuebles_nov2025.csv  subastas_inmuebles_oct2025.csv  subastas_viviendas_dic2025.csv  subastas_viviendas_dic2025_1pag.csv  subastas_viviendas_dic2025_2.csv
src/notebooks/: Web_Scraping.ipynb  observaciones.ipynb
src/utils/: bootcampviztools.py  funciones.py  inspeccion.html
